# openTivi

./: .gitignore  AGENTS.md  Makefile  README.md
.github/workflows/: release.yml  version-management.yml
apps/android-tv/: build.gradle.kts  settings.gradle.kts
apps/android-tv/rust/: Cargo.toml  build.rs
apps/android-tv/rust/src/: lib.rs
apps/desktop/: README.md  index.html  (+3 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_indexes.sql  0003_sources_auto_refresh.sql  0004_epg_channel_aliases.sql  0005_normalized_name.sql  0006_channel_health.sql
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: channels.rs  dto.rs  favorites.rs  health.rs  mod.rs  playback.rs  prewarm.rs  recents.rs  remote.rs  runtime_log.rs  settings.rs  sources.rs  update.rs
apps/desktop/src-tauri/src/core/models/: channel.rs  epg.rs  setting.rs  source.rs
apps/desktop/src-tauri/src/core/parsers/: m3u.rs  mod.rs  xmltv.rs  xtream.rs
apps/desktop/src-tauri/src/core/services/: channel_identity.rs  channel_service.rs  epg_service.rs  favorites_service.rs  health_worker.rs  import_service.rs  mod.rs  playback_service.rs  prewarm_orchestrator.rs  recents_service.rs  runtime_logger.rs  settings_service.rs  source_service.rs  update_service.rs
apps/desktop/src-tauri/src/platform/: mod.rs  proxy.rs  remote_config.rs
apps/desktop/src-tauri/src/platform/db/: connection.rs  migrations.rs
apps/desktop/src-tauri/src/platform/db/repositories/: channel_repo.rs  epg_repo.rs  favorites_repo.rs  mod.rs  recents_repo.rs  settings_repo.rs  source_repo.rs
apps/desktop/src-tauri/src/platform/fs/: paths.rs
apps/desktop/src-tauri/src/platform/http/: client.rs
apps/ios/rust/: Cargo.toml
apps/ios/rust/src/: lib.rs  opentivi.udl
crates/opentivi-core/: Cargo.toml
crates/opentivi-core/migrations/: 0007_channels_per_source_key.sql  0008_source_refresh_health.sql  0009_repair_channel_foreign_keys.sql
crates/opentivi-core/src/: context.rs  error.rs  lib.rs
crates/opentivi-core/src/core/: mod.rs
crates/opentivi-core/src/core/models/: epg.rs  mod.rs
crates/opentivi-core/src/core/parsers/: m3u.rs  xmltv.rs  xtream.rs
crates/opentivi-core/src/core/services/: channel_service.rs  epg_matching.rs  epg_service.rs  favorites_service.rs  health_worker.rs  import_service.rs  playback_service.rs  prewarm_orchestrator.rs  recents_service.rs  settings_service.rs  source_service.rs  update_service.rs
crates/opentivi-core/src/platform/: proxy.rs  remote_config.rs
crates/opentivi-core/src/platform/db/: executor.rs  migrations.rs  mod.rs
crates/opentivi-core/src/platform/db/repositories/: channel_health_repo.rs  channel_repo.rs  epg_repo.rs  favorites_repo.rs  mod.rs  recents_repo.rs  settings_repo.rs  source_repo.rs
crates/opentivi-core/src/platform/fs/: paths.rs
crates/opentivi-core/src/platform/http/: client.rs
docs/: android-tv-architecture.md  design-system.md  focus-group-wrapper.md  interaction-navigation-spec.md  ios-architecture.md  tv-remote-interaction-guide.md
scripts/: version_manager.py  version_manager.sh
(+120 files in other folders)
