[package]
name = "opentivi-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "opentivi_android"

[dependencies]
opentivi-core = { path = "../../../crates/opentivi-core" }
uniffi = { version = "0.28", features = ["build"] }
serde_json = "1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
