[package]
name = "opentivi-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "opentivi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
opentivi-core = { path = "../../../crates/opentivi-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
